syntax = "proto3";

package smartservice;

option go_package = "/proto;smartservice";

service SmartService {
  rpc CreateSmartModel(SmartModelRequest) returns (SmartModelResponse);
  rpc GetSmartModel(SmartModelQuery) returns (SmartModelResponse);
  rpc UpdateSmartModel(SmartModelRequest) returns (SmartModelResponse);
  rpc DeleteSmartModel(SmartModelQuery) returns (DeleteResponse);

  rpc CreateSmartFeature(SmartFeatureRequest) returns (SmartFeatureResponse);
  rpc GetSmartFeature(SmartFeatureQuery) returns (SmartFeatureResponse);
  rpc UpdateSmartFeature(SmartFeatureRequest) returns (SmartFeatureResponse);
  rpc DeleteSmartFeature(SmartFeatureQuery) returns (DeleteResponse);
}

message SmartModel {
  int32 id = 1;
  string name = 2;
  string identifier = 3;
  string type = 4;
  string category = 5;
  repeated SmartFeature features = 6;
}

message SmartFeature {
  int32 id = 1;
  string name = 2;
  string identifier = 3;
  string functionality = 4;
  int32 smart_model_id = 5;
}

message SmartModelRequest {
  SmartModel model = 1;
}

message SmartModelResponse {
  SmartModel model = 1;
}

message SmartModelQuery {
  int32 id = 1;
}

message SmartFeatureRequest {
  SmartFeature feature = 1;
}

message SmartFeatureResponse {
  SmartFeature feature = 1;
}

message SmartFeatureQuery {
  int32 id = 1;
}

message DeleteResponse {
  string message = 1;
  bool success = 2;
}
